--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,9 +56,7 @@ html::-webkit-scrollbar-thumb {
 .loader-container.fade-out {
   top: -120%;
 }
-/* pre loader end */
 
-/* navbar starts */
 header {
   position: fixed;
   top: 0;
@@ -181,13 +179,7 @@ header .navbar ul li a:hover {
   gap: 1.5rem;
   min-height: 100vh;
   align-items: center;
-}
-.home #particles-js {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
+  margin-top: 4rem;
 }
 .home::before {
   content: "";
@@ -198,19 +190,22 @@ header .navbar ul li a:hover {
   width: 100%;
 }
 .home .content {
-  flex: 1 1 40rem;
-  padding-top: 1rem;
+  /* flex: 1 1 60rem; */
+  width: 50%;
+  padding-top: 3rem;
   z-index: 1;
 }
 .home .image {
-  flex: 1 1 60rem;
+  /* flex: 1 1 10rem; */
+  width:40% ;
   z-index: 1;
 }
 .home .image img {
-  width: 58%;
+  border-radius: 12%;
+  width: 80%;
   margin-left: 6rem;
   /* margin-top: 12px; */
-  border-radius: 46%;
+  border-radius: 48%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
@@ -754,7 +749,7 @@ header .navbar ul li a:hover {
 .experience .timeline {
   position: relative;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 20px auto  0 auto;
 }
 .experience .timeline::after {
   content: "";
